# widthestimation

./: .gitmodules  README.md  sdiff_utils.py  setup.cfg  utils.py  width_estimation.py  width_utils.py
content/: .table_result_overview.tex.swp  table_data_overview.tex  table_result_overview.tex
data/BridgeB/: DSC08914.csv  DSC08915.csv  DSC08916.csv  DSC08917.csv  DSC08918.csv  DSC08919.csv  DSC08920.csv  DSC08921.csv  DSC08922.csv  DSC08923.csv  DSC08924.csv  DSC08925.csv  DSC08926.csv  DSC08927.csv  DSC08928.csv  DSC08929.csv  DSC08930.csv  DSC08931.csv  DSC08932.csv  DSC08933.csv  DSC08934.csv  DSC08935.csv  DSC08936.csv  DSC08937.csv  DSC08938.csv  DSC08939.csv  DSC08940.csv  DSC08941.csv  DSC08942.csv  DSC08943.csv  DSC08944.csv  DSC08945.csv  DSC08946.csv  DSC08947.csv  DSC08948.csv  DSC08949.csv  DSC08950.csv  DSC08951.csv  DSC08952.csv  DSC08953.csv  (+14 more)
data/BridgeS/: DSC06604.csv  DSC06605.csv  DSC06606.csv  DSC06607.csv  DSC06608.csv  DSC06609.csv  DSC06610.csv  DSC06611.csv  DSC06612.csv  DSC06613.csv  DSC06614.csv  DSC06615.csv  DSC06616.csv  DSC06617.csv  DSC06618.csv  DSC06619.csv  DSC06620.csv  DSC06621.csv  DSC06622.csv  DSC06623.csv  DSC06624.csv  DSC06625.csv  DSC06626.csv  DSC06627.csv  DSC06628.csv  DSC06629.csv  DSC06630.csv  DSC06631.csv  DSC06632.csv  DSC06633.csv  DSC06634.csv  DSC06635.csv  DSC06636.csv  DSC06637.csv  DSC06638.csv  DSC06639.csv  DSC06640.csv  DSC06641.csv  DSC06642.csv  DSC06643.csv  (+708 more)
data/BridgeU/: DSC09239.csv  DSC09240.csv  DSC09241.csv  DSC09242.csv  DSC09243.csv  DSC09254.csv  DSC09255.csv  DSC09256.csv  DSC09259.csv  (+32 more)
(+140 files in other folders)
