[metadata]
name = widthestimation
version = 0.1
author = Christian Benz
author_email = christian.benz@uni-weimar.de
description = Estimation of crack width from images
url = https://github.com/uncle-ben-z/widthestimation

[options]
package_dir =
    = src
packages = find:
python_required = >=3.8
install_requires =
    numpy
    networkx
    matplotlib
    scikit-image
    scipy
    tqdm

[options.packages.find]
where = src